# CC

./: .gitignore  GETTING_STARTED  GIT_COMMANDS  README  README.txt  README_FIRST  README_SECOND  SCHEDULE.txt  SETTING_UP_VIM  TODO.txt  Week2 of DLS course.rtf  c_course  futures
.metadata/: version.ini
00 Extras/: 02.c  03.c  03.s
00 Simulator/: 05.arrays_and_pointers.py  07.using_the_heap.py  08.C_calling_convention.py  simulator.py
01 Arrays/: 02.passing_arrays_to_functions.c  04.copying_arrays.c  07.pointers_arrays_and_functions.c  11.library_calls.c  exercises.c
01 Examples/: 03_Strings.c  04_Printf.c  07_QuickSort.c  11_ReversePrint.c  12_FunctionPointers.c  VariadicFunctions.c
01 Pointers/: 01.declaring_pointers.c  01_declaring_pointers.c  02.changing_pointers.c  02_moving_pointers.c  03.arrays.c  03.pointer_arithmetic.c  03_incompatable_pointers.c  04.pointers_and_arrays.c  05.incompatable_pointers.c  05.levels.c  05.pointer_arithmetic.c  07.array_and_pointer_notation.c  07a.c  08.array_and_pointer_notation.c  08.passing_arrays_to_functions.c  09.c  09.more_on_scanf.c  09.swap.c  10.scanf.c  10.structures.c  11.void_star.c  12.plusplus.c  12.structures.c  15.void_star.c  a.out  exercises.c  z.c  z.i  z.s
02 Arrays/: 01.create.c  04.copying_arrays.c  12.multidimensional_arrays.c  13.strings_gotchar.c
02 Function Pointers/: 02.heating_system.c  02.mouse_button_simulation.c  05.object_orientation.c
02 Makefiles/: g2.c
02 Makefiles/CMAKE/src/: CMakeLists.txt  f1.c  g  g_main.c
02 Structures/: 02.pointers_to_structs.c  04.io.c  Makefile
03 C Run Time/: Setjump.c
03 Pointers/: 01.declaring_pointers.c
03 Structures/: 01.structs.c  08.returning_multiple_results.c  10.returning_structures_by_pointer.c
03 The Heap/: 05.structs.c
03 The Stack/: 05.initializing_arrays.c  1.cpp  Makefile  myfile.txt  z.txt
04 BitFields/: Bitfields.c
04 Memory Leaks/: Makefile  README  USE_CACHEGRIND
04 The Heap/: 01.malloc.c  03.realloc.c  04.lifetimes.c  06.ragged_arrays.c
05 Memory Leaks/: 01_CREATE_CORE_FILE_ON_CRASH  02_RUN_GDB  03_USE_VALGRIND_TO_CHECK_FOR_LEAKS  04_USE_CACHEGRIND  05_ANNOTATE_CACHEGRIND  06_USE_MALLOC_CHECK  07_USE_MTRACE  08_PROFILING_WITH_KCACHEGRIND  ANNOTATE_CACHEGRIND  Makefile  cachegrind.out.12109  cachegrind.out.136278  cachegrind.out.179109  cachegrind.out.301182  cachegrind.out.36596  callgrind.out.142444  callgrind.out.179154  core  demo_kcachegrind.c  demo_malloc_check.c  demo_working_file.c  mtrace.txt  myfile.c  myfile2.c
05 Preprocessor/: 05.PredefinedIdentifiers.c
24 Makefiles/CMAKE with libraries/lib/: CMakeLists.txt  f1.c  f2.c  f3.c  f4.c
24 Makefiles/CMAKE with libraries/src/: CMakeLists.txt  build_and_run.py  main.c
24 Makefiles/CMAKE with subdirectories/src/: CMakeLists.txt  f2  f3.c  f4  f4.c
24 Makefiles/CMAKE with subdirectories/src/d1/: f5  f5.c  f8
24 Makefiles/CMAKE with subdirectories/src/d2/: f10  f11.c  f12  f12.c
(+615 files in other folders)
